Allow user to login and logout in application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,14 @@
  <p class="notice"><%= notice %></p>
  <p class="alert"><%= alert %></p>
 
+ <%#= binding.pry %>
+
+ <% if user_signed_in? %>
+ 	<%= link_to "Log Out", destroy_user_session_path, :method => :delete %>
+ <% else %>
+ 	<%= link_to "Login", new_user_session_path %>
+ <% end %>
+
 <%= yield %>
 
 </body>
